# LingoAnki

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  install.sh  lingoAnki.py  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: build.yml  release.yml
lingoanki/: __main__.py  config.yaml  diary.py  tprs.py  webapp.py
lingoanki/templates/: diary.html  diary_generate_lessons.html  diary_html.html  diary_output.html  diary_tprs.html  diary_tprs_play_audio.html
lingoanki/translations/fr/LC_MESSAGES/: messages.mo  messages.po
readme_ressources/: 📖 Diary - Dagbokkorrigering.md
readme_ressources/DAILY_AUDIO/: Norwegian 🇳🇴Diary 📖_2025-04-07_Testens spennende reise.md
readme_ressources/TPRS/: Norwegian 🇳🇴- Diary 📖_TPRS_2025-04-07_Testens spennende reise.md
test_lingoanki/: test_lingoanki.py
